--- a/src/App.css
+++ b/src/App.css
@@ -42,8 +42,18 @@ a{
     transform: translateY(0px);
   }
 }
-
-
+.show{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.217);
+  transition: 200ms ease;
+}
+.none{
+  display: none;
+}
 /* 
 postiion: fixed;
 top: 0;
